--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,13 +1,14 @@
-<div class="banner d-flex align-items-center" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1578683010236-d716f9a3f461?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2850&q=80);">
-  <div class="container">
-    <h1>COTTON HOME</h1>
-    <p>Change your life and learn to code at one of our campuses around the world.</p>
-    <a class="btn btn-flat" href="#">Apply now</a>
+<div class="banner d-flex align-items-end" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1578683010236-d716f9a3f461?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2850&q=80);">
+  <div class="container text-center pb-5">
+    <h1>Nueva Colección</h1>
+    <a href="#home-cards">Muchos productos nuevos...</a>
   </div>
 </div>
-<div class="home-cards">
-  <%= render 'cards' %>
-</div>
+<section id="home-cards">
+  <div class="home-cards">
+    <%= render 'cards' %>
+  </div>
+</section>
 <div class="container">
   <div class="text-center">
     <h2 class="pt-5">Mas vendidos</h2>
