--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -6,9 +6,9 @@
       <rect y="15.4286" width="24.7826" height="2.57143" fill="black"/>
     </svg>
   </button>
-  <div style="width: 120px; height: 62px;">
+  <div>
     <%= link_to root_path, class: 'navbar-brand' do  %>
-    <p>cotton home</p>
+      <%= image_tag 'logo1.png' %>
     <% end %>
   </div>
 
