--- a/app/assets/stylesheets/components/_login.scss
+++ b/app/assets/stylesheets/components/_login.scss
@@ -98,16 +98,16 @@
   }
 }
 //edit account
-.sing-up-wrapper {
+.edit-wrapper {
   width: 100%;
   padding-top: 100px;
   background-color: white;
-  height: 100vh;
 }
-.sing-up-container {
+.edit-container {
   width: 400px;
   margin: 0px auto;
   padding: 0px  30px;
+  padding-bottom: 30px;
   h2 {
     font-size: 22px;
   }
