--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -1,15 +1,19 @@
 <div class="pl-0 pl-md-4">
   <h2 class="font-weight-bold h3 pb-4">TUS DATOS</h2>
   <h2 class="h5 font-weight-bold mb-1">Nombre legal</h2>
-  <p><%= @user.email %></p>
-  <h2 class="h5 font-weight-bold mb-1">Telefono</h2>
-  <p>algo para poner </p>
-  <h2 class="h5 font-weight-bold mb-1">Direción</h2>
-  <p>algo para poner %></p>
+  <p><%= @user.name %></p>
+  <h2 class="h5 font-weight-bold mb-1">Teléfono</h2>
+  <p><%= @user.phone %></p>
+  <h2 class="h5 font-weight-bold mb-1">Dirección</h2>
+  <p><%= @user.address %></p>
+  <h2 class="h5 font-weight-bold mb-1">Codigo Postal</h2>
+  <p><%= @user.zip_code %></p>
   <h2 class="h5 font-weight-bold mb-1">Ciudad</h2>
-  <p>algo para poner </p>
+  <p><%= @user.city %></p>
+  <h2 class="h5 font-weight-bold mb-1">Provincia</h2>
+  <p><%= @user.state %></p>
   <h2 class="h5 font-weight-bold mb-1">Dirección de correo electrónico</h2>
-  <p>algo para poner </p>
+  <p><%= @user.email %></p>
   <div class="pt-3 pb-5">
    <%= link_to 'Editar Perfil', edit_user_registration_path, class: "btn btn-dark btn-lg btn-block" %>
  </div>
