--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -23,7 +23,7 @@
       <% end %>
       <% end %>
     </div>
-    <p class="px-2 px-md-5 pt-3">Sábana de 400 hilos, 100% algodón egipcio con bordado en forma de cadena. Vienen 3 o 4 piezas según el tamaño elegido: Sábana ajustable, Sábana plana y una o dos fundas de almohada.</p>
+    <p class="px-2 px-md-5 pt-3"><%= @product.description %></p>
     <%= render 'content' %>
   </div>
 </div>
