--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -3,6 +3,6 @@
 <%= f.input :photo %>
 <div class="text-right">
   <%= f.submit class: "btn btn-primary btn-block mt-4" %>
-  <%= link_to "volver", :back , class: "btn btn-secondary mt-4 text-right"%>
+  <%= link_to "volver", :back , class: "btn btn-secondary mt-4 text-right mb-5"%>
 </div>
 <% end %>
