--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container pt-5">
+<div class="container pt-5 pb-5">
   <table class="table table-striped mt-5">
     <thead>
       <tr>
@@ -21,7 +21,7 @@
       <% end %>
     </tbody>
   </table>
-  <div class="text-right mt-5">
+  <div class="text-right mt-5 mb-5">
     <%= link_to 'menu', "#", class: "btn btn-secondary"  %>
   </div>
 </div>
