Change letters in subcategory

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -14,10 +14,10 @@
       <h6 class="pb-4">COLOR</h6>
       <% product_name =  @product.name %>
       <% product_links = @products.filter { |product| product.name == product_name } %>
-      <% product_links.each do |p| %>
+      <% product_links.each do |product| %>
 
-      <%= link_to product_path(p) do %>
-      <% p.photos.first(1).each do |photo| %>
+      <%= link_to product_path(product) do %>
+      <% product.photos.first(1).each do |photo| %>
       <%= cl_image_tag photo.key %>
       <% end %>
       <% end %>
