Change style in search

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -24,7 +24,7 @@
         <% end %>
       </div>
       <div class="cart-search">
-        <%= link_to "#" do  %>
+        <%= link_to pages_search_path do  %>
         <i class="fas fa-search"></i>
         <% end %>
       </div>
@@ -53,7 +53,7 @@
         <% end %>
       </div>
       <div>
-        <%= link_to "#" do  %>
+        <%= link_to pages_search_path do  %>
         <i class="fas fa-search" style="color: black; font-size: 24px;"></i>
         <% end %>
         <% if user_signed_in? %>
