--- a/app/views/pages/result.html.erb
+++ b/app/views/pages/result.html.erb
@@ -1,13 +1,14 @@
-<div class= "product-search-wrapper">
-  <h5><strong>Resultados</strong> (<%= @products.uniq(&:name).count %>)</h5>
-  <div class= "division-container ">
+<div class="container mt-5">
+  <br>
+  <h5 class="pb-5 pt-5"><strong>Resultados</strong> (<%= @products.uniq(&:name).count %>)</h5>
+  <div id="category-container">
     <% @products.uniq(&:name).each do |product| %>
     <%= render 'shared/product_card', product: product %>
     <% end %>
   </div>
   <div class="p-5 text-center">
-    <div class="p-5">
-      <%= link_to 'INICIO', root_path , class: 'btn btn-block btn-product' %>
+    <div class="p-5" style="margin-bottom: 300px;">
+      <%= link_to 'INICIO', root_path , class: 'btn btn-block btn-primary' %>
     </div>
   </div>
 </div>
