--- a/app/views/pages/result.html.erb
+++ b/app/views/pages/result.html.erb
@@ -8,7 +8,7 @@
   </div>
   <div class="p-5 text-center">
     <div class="p-5" style="margin-bottom: 300px;">
-      <%= link_to 'INICIO', root_path , class: 'btn btn-block btn-primary' %>
+      <%= link_to 'Volver', root_path , class: 'btn btn-dark px-5' %>
     </div>
   </div>
 </div>
