--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -13,9 +13,12 @@
     </div>
     <div class="text-center pt-5 search-footer">
       <h2>NAVEGA POR CATEGORIAS</h2>
-      <% @categories.each do |category| %>
-      <p><%= link_to category.name.upcase, category_path(category) %></p>
+      <% @sub_categories.each do |category| %>
+      <p><%= link_to category.name.upcase, sub_category_path(category) %></p>
       <% end %>
+    </div>
+    <div class="py-5 text-center">
+      <%= link_to 'Volver', root_path, class: "btn btn-dark px-5"  %>
     </div>
   </div>
 </div>
