Fix navbar mobile

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -53,7 +53,8 @@
 }
 .cart-item {
   font-size: 16px;
-  margin-left: -30px;
+  margin-left: 10px;
+  margin-bottom: 6px;
   i {
     color: black;
     font-size: 24px;
