--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,2 +1,6 @@
-<h1>Articles#new</h1>
-<p>Find me in app/views/articles/new.html.erb</p>
+<div class="container pt-5">
+  <div class="bg-white p-5 mt-5">
+    <h2 class="text-center pb-4">Crear Producto (Mayorista)</h2>
+    <%= render 'form' %>
+  </div>
+</div>
