--- a/app/views/divisions/edit.html.erb
+++ b/app/views/divisions/edit.html.erb
@@ -1,2 +1,6 @@
-<h1>Divisions#edit</h1>
-<p>Find me in app/views/divisions/edit.html.erb</p>
+<div class="container pt-5">
+  <div class="bg-white mt-5 p-5">
+    <h2 class="text-center pb-4">Editar Categoria (Mayorista)</h2>
+    <%= render 'form' %>
+  </div>
+</div>
