--- a/app/views/divisions/new.html.erb
+++ b/app/views/divisions/new.html.erb
@@ -1,2 +1,6 @@
-<h1>Divisions#new</h1>
-<p>Find me in app/views/divisions/new.html.erb</p>
+<div class="container pt-5 mb-5">
+  <div class="bg-white p-5 mt-5">
+    <h2 class="text-center pb-4">Crear Categoria (Mayorista)</h2>
+    <%= render 'form' %>
+  </div>
+</div>
