--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,2 +1,6 @@
-<h1>Articles#edit</h1>
-<p>Find me in app/views/articles/edit.html.erb</p>
+<div class="container mt-5">
+  <div class="bg-white p-5">
+    <h2 class="text-center pb-4">Editar Producto (Mayorista)</h2>
+    <%= render 'form' %>
+  </div>
+</div>
