--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,2 +1,44 @@
-<h1>Articles#index</h1>
-<p>Find me in app/views/articles/index.html.erb</p>
+<% if current_user.permission_level == "admin" %>
+<div class="container pt-5">
+  <table class="table table-striped mt-5">
+    <thead>
+      <tr>
+        <th>Producto</th>
+        <th>Categorias</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @articles.each do |article| %>
+      <tr>
+        <th class="font-weight-light"><%= article.name %></th>
+        <th class="badge badge-pill badge-secondary h6 text-center ml-2 mt-2"><%= article.division.name %></th>
+        <td class="text-right">
+          <%= link_to 'ver', article_path(article), class: "pr-2" %>
+          <%= link_to 'editar', edit_article_path(article), class: "pr-2" %>
+          <%= link_to 'eliminar', article_path(article),  method: :delete, data: { confirm: 'Are you sure?' }, class: "text-danger"  %>
+        </td>
+      </tr>
+      <% end %>
+    </tbody>
+  </table>
+  <div class="text-right mt-5">
+    <%= link_to 'volver', :back, class: "btn btn-secondary" %>
+  </div>
+  <div class="d-flex justify-content-center">
+    <%= will_paginate @users, renderer: WillPaginate::ActionView::BootstrapLinkRenderer %>
+  </div>
+</div>
+<% else %>
+<div class="categories pb-5 pt-5">
+  <div class="d-md-flex justify-content-center py-2 py-md-5 text-center px-3 px-md-0">
+    <% @divisions.each do |division| %>
+    <h5 class="py-2 py-md-3 mb-0 border-bottom"><%= link_to division.name, division_path(division), class: "pl-md-3 text-body" %></h5>
+    <% end %>
+  </div>
+  <div class="container" id="category-container">
+    <% @articles.each do |article| %>
+    <%= render 'shared/article_card', article: article %>
+    <% end %>
+  </div>
+</div>
+<% end %>
