--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,8 @@
+<% if user_signed_in? && current_user.permission_level == 'admin' %>
+<div class="container my-5 pt-5">
+  <%= render 'article_admin_panel' %>
+</div>
+<% end %>
 <div class="product-container my-5 pt-4 mb-5">
   <div class="product-image pt-2">
     <%= render 'article_carousel' %>
@@ -10,7 +15,6 @@
       <% article_name =  @article.name %>
       <% article_links = @articles.filter { |article| article.name == article_name } %>
       <% article_links.each do |article| %>
-
       <%= link_to article_path(article) do %>
       <% article.photos.first(1).each do |photo| %>
       <%= cl_image_tag photo.key %>
@@ -18,6 +22,24 @@
       <% end %>
       <% end %>
     </div>
-    <p class="px-2 px-md-5 pt-3"></p>
+    <table class="table table-striped mt-3">
+      <thead>
+        <tr>
+          <th>Talles</th>
+          <th>Precio</th>
+          <th>Descripcion</th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @article.dimensions.each do |dimension| %>
+        <tr>
+          <th><%= dimension.size %></th>
+          <td>$<%= dimension.price %></td>
+          <td><%= dimension.description %></td>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
   </div>
 </div>
