--- a/app/views/divisions/_form.html.erb
+++ b/app/views/divisions/_form.html.erb
@@ -2,6 +2,6 @@
 <%= f.input :name %>
 <div class="text-right">
   <%= f.submit class: "btn btn-primary btn-block mt-4" %>
-  <%= link_to "volver", :back , class: "btn btn-secondary mt-4 text-right mb-5"%>
+  <%= link_to "volver", user_path(current_user) , class: "btn btn-secondary mt-4 text-right mb-5"%>
 </div>
 <% end %>
