--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -4,6 +4,6 @@
 <%= f.association :division %>
 <div class="text-right">
   <%= f.submit class: "btn btn-primary btn-block mt-4" %>
-  <%= link_to "volver", :back , class: "btn btn-secondary mt-4"%>
+  <%= link_to "volver", user_path(current_user) , class: "btn btn-secondary mt-4"%>
 </div>
 <% end %>
