--- a/app/views/articles/_article_admin_panel.html.erb
+++ b/app/views/articles/_article_admin_panel.html.erb
@@ -1,7 +1,8 @@
 <div class="bg-white p-5 mt-5">
+  <h2 class="text-danger font-weight-bold h5">Este es un producto mayorista</h2>
   <h2 class="text-center pb-4 pt-5 h4 font-weight-bold">Completar <%= @article.name %></h2>
-  <%= link_to 'Crear Talles', new_article_dimension_path(@article), class: "btn btn-primary btn-block my-4" %>
-  <%= link_to 'Editar articleo', edit_article_path(@article), class: "btn btn-warning btn-block mt-3"  %>
+  <%= link_to 'Crear talles', new_article_dimension_path(@article), class: "btn btn-primary btn-block my-4" %>
+  <%= link_to 'Editar producto', edit_article_path(@article), class: "btn btn-warning btn-block mt-3"  %>
 </div>
 <table class="table table-striped mt-3">
   <thead>
