--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,3 +1,6 @@
+<% if user_signed_in? && current_user.permission_level == "wholesaler" %>
+<%= render 'shared/wholesaler_navbar' %>
+<% else %>
 <nav class="navbar navbar-expand-lg navbar-light navbar-lewagon fixed-top">
   <button class="navbar-toggler" type="button" data-toggle="modal" data-target="#navbar-modal">
     <svg width="30" height="18" viewBox="0 0 30 18" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -12,7 +15,7 @@
     <% end %>
   </div>
   <div class="d-lg-none magnify">
-  <%= render 'shared/mobile_navbar' %>
+    <%= render 'shared/mobile_navbar' %>
   </div>
   <div class="collapse navbar-collapse" id="navbarNav">
     <% @categories.each do |category| %>
@@ -66,3 +69,4 @@
     </div>
   </div>
 </div>
+<% end %>
