--- a/app/views/dimensions/new.html.erb
+++ b/app/views/dimensions/new.html.erb
@@ -5,6 +5,7 @@
     <%= f.input :size %>
     <%= f.input :price %>
     <%= f.input :description %>
+    <%= f.input :clarification %>
     <div class="text-right">
       <%= f.submit class: "btn btn-primary btn-block mt-4" %>
       <%= link_to "volver", article_path(@article) , class: "btn btn-secondary mt-4"%>
