--- a/app/views/articles/_article_admin_panel.html.erb
+++ b/app/views/articles/_article_admin_panel.html.erb
@@ -8,9 +8,9 @@
   <thead>
     <tr>
       <th>Talle</th>
-      <th>Stock</th>
       <th>Precio</th>
-      <th></th>
+      <th>Medidas</th>
+      <th>Descripción</th>
     </tr>
   </thead>
   <tbody>
@@ -18,6 +18,7 @@
     <tr>
       <th><%= dimension.size %></th>
       <td><%= dimension.price %></td>
+      <td><%= dimension.clarification %></td>
       <td><%= dimension.description %></td>
       <td class="text-right">
         <%= link_to 'ver', dimension_path(dimension), class: "pr-2"  %>
