--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -36,6 +36,20 @@
   }
 }
 
+.article-banner {
+  background-size: cover;
+  background-position: center;
+  height: 340px;
+  margin-top: 82px;
+  h2 {
+    margin: 0;
+    color: white;
+    text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+    font-size: 32px;
+    font-weight: bold;
+  }
+}
+
 @media(max-width: 575px) {
   .banner {
     height: 60vh;
@@ -45,6 +59,13 @@
 
     a {
       font-size: 13px;
+    }
+  }
+
+  .article-banner {
+    height: 250px;
+    h2 {
+      font-size: 24px;
     }
   }
 }
