--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,6 +1,4 @@
 .card {
-  img {
-  }
   .card-title {
     font-weight: bold;
   }
@@ -13,3 +11,13 @@
     box-shadow: 1px 1px 10px lightgrey;
   }
 }
+
+@media(max-width: 575px) {
+  #article-card {
+    img {
+      height: 203px;
+      object-fit: cover;
+    }
+  }
+}
+
