--- a/app/views/divisions/show.html.erb
+++ b/app/views/divisions/show.html.erb
@@ -1,7 +1,11 @@
-<div class="container pt-5 mt-5">
-  <h1 class="text-center"><%= @division.name %></h1>
+<div class="article-banner d-flex align-items-center justify-content-center" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1541004995602-b3e898709909?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2850&q=80);">
+  <div>
+    <h2><%= @division.name %></h2>
+  </div>
+</div>
+<div class="container">
   <div class="categories pb-5">
-    <div class="d-md-flex justify-content-center py-2 py-md-5 text-center px-3 px-md-0">
+    <div class="d-md-flex justify-content-center py-2 py-md-3 text-center px-3 px-md-0 mb-4">
       <% @divisions.each do |division| %>
       <h5 class="py-2 py-md-3 mb-0 border-bottom"><%= link_to division.name, division_path(division), class: "pl-md-3 text-body" %></h5>
       <% end %>
