--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <% if @user == current_user %>
-<% if current_user.admin? %>
+<% if current_user.user_is_admin? %>
 <%= render 'admin_menu' %>
 <% else %>
 <%= render 'wholesaler_menu' %>
