Fix modal product title

--- a/app/views/products/_modal.html.erb
+++ b/app/views/products/_modal.html.erb
@@ -8,13 +8,13 @@
         </button>
       </div>
       <div class="modal-body text-left">
-        <h3 class="bg-secondary h5 py-2 px-1 font-weight-bold">Cuna</h3>
+        <h3 class="bg-dark text-white h5 py-2 px-1 font-weight-bold text-center">Cuna</h3>
         <p>Para colchón de hasta 0.60 m de ancho x 1.20 m de largo x 0.20 m de alto.</p>
-        <h3 class="bg-secondary h5 py-2 px-1 font-weight-bold">Twin Size</h3>
+        <h3 class="bg-dark text-white h5 py-2 px-1 font-weight-bold text-center">Twin Size</h3>
         <p>Para colchón de hasta 1 m de ancho x 2 m de largo x 0.25 m de alto.</p>
-        <h3 class="bg-secondary h5 py-2 px-1 font-weight-bold">Queen Size</h3>
+        <h3 class="bg-dark text-white h5 py-2 px-1 font-weight-bold text-center">Queen Size</h3>
         <p>Para colchón de hasta 1.50 m de ancho x 1.90 m de largo x 0.25 m de alto.</p>
-        <h3 class="bg-secondary h5 py-2 px-1 font-weight-bold">King Size</h3>
+        <h3 class="bg-dark text-white h5 py-2 px-1 font-weight-bold text-center">King Size</h3>
         <p>Para colchón de hasta 2 m de ancho x 2 m de largo x 0.35 m de alto</p>
       </div>
     </div>
