--- a/app/assets/stylesheets/carts/_show.scss
+++ b/app/assets/stylesheets/carts/_show.scss
@@ -97,11 +97,19 @@
 
 
 
-@media (min-width: 100px)and(max-width: 675px) {
+@media(max-width: 675px) {
+  .keep-shopping {
+    margin-top: 40px;
+  }
   .cart-container {
     width: 90%;
     margin: 0 auto;
+  }
 
+  .check-out-wrapper {
+    padding: 10px 20px;
+    flex: 0 0 40%;
+    margin-bottom: 90px;
   }
 
 }
