--- a/app/views/line_items/_line_item.html.erb
+++ b/app/views/line_items/_line_item.html.erb
@@ -2,7 +2,9 @@
 </div>
 <div class="line-wrapper py-3 py-md-5" >
   <div class="line-image">
-    <img src="https://images.unsplash.com/photo-1517694712202-14dd9538aa97?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80" alt="">
+    <% line_item.product.photos.first(1).each do |photo| %>
+    <%= cl_image_tag photo.key%>
+    <% end %>
   </div>
   <div class="line-content pb-md-5">
     <h2 ><%= line_item.product.name %></h2>
